design ui and get pokemon data from freecodecamp api using axios

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   </head>
   <body>
     <div id="main">
-      <div class="main-title">Info Pokemon</div>
+      <div class="main-title">Info Pokémon</div>
       <div class="content">
         <!-- search section  -->
         <div class="search">
           <input id="searchInput" type="text" />
-          <button id="searchBtn"><img src="search.png" alt="" /></button>
+          <button id="searchBtn"><img src="assets/search.png" alt="" /></button>
         </div>
 
         <div class="detail">
